--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Alfonso DP</title>
     <link rel="stylesheet" href="css/styles.css">
-    <script src="https://kit.fontawesome.com/60a7b6f483.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
 <body>
 
@@ -58,7 +58,8 @@
                 <div class="card">
                     <div class="card_img">
                         <div class="card_title">
-                            <h3>Projects Description</h3>
+                            <h4>Projects Description</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus expedita illo magnam voluptate aut, consequuntur quasi labore eius assumenda rem consectetur ex magni consequatur dolorum nam veritatis saepe culpa illum.</p>
                         </div>
                         <div class="project_links">
                             <a href="">
@@ -71,7 +72,12 @@
                                 <i class="fa-solid fa-code"></i>
                             </a>
                         </div>
-                        <button class="project_details">Project Details</button>
+                        <div class="project_details_content">
+                            <a href="">
+                                <button class="project_details download-cv">Project Details</button>
+                            </a>                         
+                        </div>
+                        
                     </div>
                 </div>
             </div>
