arreglo a la seccion del about

--- a/index.html
+++ b/index.html
@@ -160,6 +160,8 @@
                 <h5>Frontend Developer</h5>
             </div>
     
+                <form action=""></form>
+
             <div class="social-network">
                 <ul>
                     <li>
