arreglando la seccion d el navbar

--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
         </main>
 
         <div class="about">
-            <img src="./img/ADP.jpg" alt="AlfonsoDP2">
+            <img src="./img/Coderhouse.png" alt="AlfonsoDP2">
             
             <div class="about-info">
                 <h2>About Me</h2>
                 <div class="divider"></div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non eligendi laudantium saepe consequatur quas tempora inventore quae laboriosam? Aut unde pariatur eos saepe esse laudantium accusamus perspiciatis ullam iusto dolores.</p>
+                <p>Desarrollador web con dos años de experiencia generando código para empresas de diferentes sectores laborales. </p>
 
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non eligendi laudantium saepe consequatur quas tempora inventore quae laboriosam? Aut unde pariatur eos saepe esse laudantium accusamus perspiciatis ullam iusto dolores.</p>
+                <p>De acuerdo a las necesidades empresariales individuales, plasmamos en codigo los diseños entregados por los distintos profesionales del diseño, para lograr una interfaz grafica eficiente para los clientes. Soy especialista en solución de problemas y trabajo en equipo.</p>
                 <button class="download-cv">Read More</button>
             </div>
         </div>
@@ -147,7 +147,7 @@
                             <input type="text" placeholder="Name">
                             <input type="email" placeholder="Email">
                             <textarea placeholder="Place your message here"></textarea>                    
-                            <button type="submit" class="btn_submit">Send Message</button>
+                            <button type="submit" class="btn_submit"><a href="mailto:alfonsodussanpaez@protonmail.com?">Send Message</a> </button>
                         </form>
                     </div>
                 </div>
@@ -157,7 +157,7 @@
         <footer class="footer">
             <div class="footer-content">
                 <h2>Alfonso Dussan Paez</h2>
-                <h5>Frontend Developer</h5>
+                <h3>Frontend Developer Jr.</h3>
             </div>
     
                 <form action=""></form>
@@ -165,20 +165,20 @@
             <div class="social-network">
                 <ul>
                     <li>
-                        <a href="">
-                            <i class="fa-brands fa-reddit"></i>
+                        <a href="#">
+                            <i class="fa-brands fa-reddit">Reddit</i>
                         </a>
                     </li>
 
                     <li>
-                        <a href="">
-                            <i class="fa-brands fa-linkedin"></i>
+                        <a href="#">
+                            <i class="fa-brands fa-linkedin">Linkedin</i>
                         </a>
                     </li>
 
                     <li>
-                        <a href="">
-                            <i class="fa-brands fa-twitter"></i>
+                        <a href="#">
+                            <i class="fa-brands fa-twitter">Twitter</i>
                         </a>
                     </li>
                 </ul>
